# fd

./: Cargo.toml  Makefile  build.rs
ci/: build-deb  make-dist-tarball.bash  make_dist.bash
doc/: fd.1
src/: app.rs  cli.rs  dir_entry.rs  exit_codes.rs  filetypes.rs  main.rs  options.rs  output.rs  walk.rs
src/exec/: mod.rs
tests/: tests.rs
tests/testenv/: mod.rs
